# ai-engineer-portfolio

./: README.md  embeddings.ipynb
a2a/: .gitignore  README.md  docker-compose.yml  jest.config.json  package.json  tsconfig.json
aws-gen-ai/: strandsagent.py
claude-mastery/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SYLLABUS.md  claude-mastery-standalone.html  index.html  package-lock.json  package.json  vite.config.js
comm-coach/: .gitignore  README.md  app.py  requirements.txt
digital-twin-chat/: .gitignore  AWS_DEPLOYMENT_TESTING.md  (+17 more)
langchain/deep-agents/: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  agent.py  app.py  config.py  main.py  pyproject.toml  requirements.txt  server.py
langchain/deep-agents/blogs/: multi_agent_orchestration_trends.md
langchain/deep-agents/frontend/: index.html  package-lock.json  package.json  test-ui.mjs  vite.config.ts
langchain/deep-agents/frontend/src/: App.tsx  api.ts  index.css  types.ts
langchain/deep-agents/frontend/src/components/: ActivityFeed.tsx  ChatPanel.tsx  DeployBanner.tsx  ErrorBoundary.tsx  Header.tsx  MessageBubble.tsx  OrchestrationTimeline.tsx  RunHistoryPanel.tsx  Sidebar.tsx
langchain/deep-agents/frontend/src/utils/: format.ts
langchain/deep-agents/scripts/: run.sh
langchain/deep-agents/services/: agent_service.py  project_data.py  run_history.py  static_deploy.py
langchain/deep-agents/skills/code-reviewer/: SKILL.md
langchain/deep-agents/skills/research/: SKILL.md
langchain/deep-agents/skills/static-deploy/: SKILL.md
langchain/deep-agents/skills/writer/: SKILL.md
(+335 files in other folders)
